# fetter-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
doc/: notes.txt
src/: audit_report.rs  cli.rs  count_report.rs  dep_manifest.rs  dep_spec.pest  dep_spec.rs  exe_search.rs  install_report.rs  lib.rs  main.rs  osv.rs  osv_query.rs  osv_vulns.rs  package.rs  package_durl.rs  package_match.rs  path_shared.rs  purge_report.rs  request_client.rs  scan_fs.rs  scan_report.rs  spin.rs  table.rs  unpack_report.rs  ureq_client.rs  util.rs  validation.rs  validation_report.rs  version_spec.rs
