[package]
name = "fetter"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Ariza"]
homepage = "https://github.com/flexatone/fetter"
repository = "https://github.com/flexatone/fetter"
readme = "README.md"

description = "Discover, manage, and monitor Python packages accross entire systems."

keywords = ["package", "allow-listing", "python"]
categories = [
    "filesystem",
    "command-line-utilities",
]

[dependencies]
rayon = "1.10"
pest = "2.3"
pest_derive = "2.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.17", features = ["derive"] }

[dev-dependencies]
tempfile = "3.12"
serde_json = "1.0"

[profile.release]
debug = false
