[package]
name = "fetter"
version = "0.10.0"

edition = "2021"
authors = ["Christopher Ariza"]
homepage = "https://github.com/fetter-io/fetter-rs"
repository = "https://github.com/fetter-io/fetter-rs"
license = "GPL-3.0-or-later"
readme = "README.md"

description = "System-wide Python package discovery and allow listing."

keywords = ["package", "allow-listing", "python"]
categories = [
    "filesystem",
    "command-line-utilities",
]

[dependencies]
rayon = "1.10"
pest = "2.3"
pest_derive = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.17", features = ["derive"] }

[dev-dependencies]
tempfile = "3.12"

[profile.release]
debug = false
